// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginDto> <Property: password> should fail if is empty 1`] = `
[
  {
    "constraints": {
      "isNotEmpty": "Password is required",
    },
    "property": "password",
    "value": "",
  },
]
`;

exports[`<LoginDto> <Property: usernameOrEmail> should fail if is empty 1`] = `
[
  {
    "constraints": {
      "isNotEmpty": "Username or email is required",
    },
    "property": "usernameOrEmail",
    "value": "",
  },
]
`;
